Issue #14007: make TreeBuilder an actual type exposed from _elementtree, and subclassable.